--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
-    "xterm": "^5.3.0"
+    "xterm": "^5.3.0",
+    "react-dropzone": "^14.2.3",
+    "pdfjs-dist": "^3.4.120",
+    "chrono-node": "^2.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
